# CrytpoWalletTest

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  logging_config.json  manage.py  pyproject.toml  test.py
api_service/: api_service_consumer.py  api_service_producer.py
api_service/config/: __init__.py  app.py  celery.py  celery_utils.py  db.py  openapi.py  router.py  settings.py  storage.py
apps/admin/: health.py
apps/crypto/: api_service_consumer.py  api_service_producer.py  crud.py  database.py  dependencies.py  enums.py  exceptions.py  manager.py  models.py  schemas.py  views.py  wallets_balance_parser.py  web3_client.py  web3_clients.py
apps/front/: auth_views.py  chat_views.py  dependencies.py  ibay_views.py  profile_views.py  router.py  wallet_views.py
apps/ibay/: database.py  dependencies.py  ibay_models.py  ibay_service_consumer.py  manager.py
apps/network_ethereum/: block_parser.py
apps/product/: database.py  dependencies.py  exceptions.py  manager.py  models.py  schemas.py  views.py
apps/socketio_app/: client_dispatcher.py  database.py  dependencies.py  manager.py  models.py  socket_server.py  socket_service_consumer.py
apps/tests/: conftest.py
apps/users/: crud.py  database.py  dependencies.py  exceptions.py  jwt_backend.py  manager.py  models.py  profile_views.py  schemas.py  tasks.py  user.py  views.py  views_auth.py  views_profile.py
config/: __init__.py  app.py  celery.py  celery_utils.py  costum_logging.py  db.py  lifetime.py  openapi.py  router.py  settings.py  storage.py  web3_clients.py
config/commands/: init.py
config/utils/: __init__.py  celery.py  email_client.py  examples_gen.py  exceptions.py  formatters.py  rate_limiter.py  (+1 more)
deploy/: sample.env
eth_network_service/: eth_block_parser.py
ibay_service/: ibay_service_consumer.py  ibay_service_producer.py
socketio_service/: client_dispatcher.py  socket_server.py  socket_service_consumer.py  socket_service_producer.py
(+110 files in other folders)
