[tool.poetry]
name = "cryptowallet"
version = "0.0.1"
description = ""
authors = ["SpaceLab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
fastapi = "^0.85.0"
toml = "^0.10.2"
yarl = "^1.8.1"
email-validator = "^1.3.0"
async-lru = "^1.0.3"
pyhumps = "^3.7.3"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
click = "^8.1.3"
httpx = "^0.23.0"
loguru = "^0.6.0"
aioredis = "^2.0.1"
celery = "^5.2.7"
aio-pika = "^8.2.4"
sqlalchemy = "^1.4.42"
passlib = "^1.7.4"
fastapi-helper = "^0.0.12"
pyjwt = "^2.6.0"
fastapi-mail = "^1.2.0"
web3 = "^5.31.1"
psycopg2-binary = "^2.9.5"
python-multipart = "^0.0.5"
sqlalchemy-media = "^0.17.4"
boto3 = "^1.25.5"
asgi-lifespan = "^1.0.1"
faker = "^15.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autoflake = "^1.7.6"
flake8-pyproject = "^1.1.0.post0"

[tool.flake8]
max-line-length = 120
exclude = 'venv,.git,'
application-import-names = "app"
import-order-style = "google"
max-complexity = 11
ignore = ""
inline-quotes= '"'

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
